--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,21 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:27.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.patrickpissurno:ripple-effect:1.3.1'
+    implementation 'com.github.dmytrodanylyk.shadow-layout:library:1.0.3'
+    implementation 'com.amitshekhar.android:android-networking:1.0.0'
+    implementation 'com.jakewharton:butterknife:8.8.0'
+    implementation 'com.leavjenn.smoothdaterangepicker:library:0.2.0'
+    implementation 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
+    implementation 'com.android.support:cardview-v7:27.1.0'
+
 }
