--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".tab_one.TabOne" />
-        <activity android:name=".tab_two.TabTwo" />
-        <activity android:name=".tab_three.TabThree" />
-        <activity android:name=".activity.PencarianPenerbangan" />
-        <activity android:name=".reservasi.InProgress" />
-        <activity android:name=".reservasi.History"></activity>
+
+        <activity android:name=".activity.PencarianPenerbangan"
+            android:parentActivityName=".MainActivity"
+            />
+
     </application>
 
 </manifest>
